<resources>
    <string name="app_name">CIA</string>
    <string name="title_activity_filter_events">Filter Habit</string>
    <string name="habitType">Habit Type</string>
    <string name="menu_My_Profile">My Profile</string>
    <string name="menu_AddNewHabit">Add New Habit</string>
    <string name="menu_Statistic">Statistics</string>
    <string name="menu_HabitHistory">Habit History</string>
    <string name="menu_Notification">Notifications</string>
    <string name="menu_WOW">Power Rankings</string>
    <string name="menu_HabitRankings">Overall Rankings</string>
    <string name="menu_MyFollowing">Followed Users</string>
    <string name="menu_searchUsers">Search Users</string>
    <string name="menu_FollowRequests">Follow Requests</string>
    <string name="menu_followedHistory">Follower History</string>
    <string name="menu_nearbyEvents">Nearby Events</string>
    <string name="TodayTask">Today\'s Tasks</string>
    <string name="HabitNameText">Habit Name:</string>
    <string name="HabitTypeText">Habit Type:</string>
    <string name="HabitReasonText">Habit Reason:</string>
    <string name="StartDateText">Start Date:</string>
    <string name="FrequencyText">Repeat Frequency:</string>
    <string name="Edit">Edit</string>
    <string name="Delete">Delete</string>
    <string name="Type_Input">New Type:</string>
    <string name="enter_new_type_here">Enter new type here:</string>
    <string name="ok">OK</string>
    <string name="edit_habit">Edit Habit</string>
    <string name="save">Save</string>
    <string name="frequency">Frequency:</string>
    <string name="habit_type_list">Habit Categories</string>
    <string name="choose_a_habit_to_see_statistic_result">Choose Habit Category</string>
    <string name="title_activity_view_nearby_events">Nearby Events</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="s_habit">\'s Habit</string>
    <string name="title_activity_home_tabbed">HomeTabbedActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="dashboard">Dashboard</string>
    <string name="title_search">Search</string>
    <string name="title_newHabit">Add Habit</string>
    <string name="title_followRequests">Follow Requests</string>
    <string name="title_profile">Profile</string>
    <string name="habits">Habits</string>
    <string name="todays_task">Today\'s Tasks</string>
</resources>
