<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017 CMPUT301F17T15. This project is distributed under the MIT license.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/DropDownMenu"
        android:title="@string/menu_Menu"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_button1"
        android:title="@string/menu_AddNewHabit"
        />
    <item
        android:id="@+id/menu_button2"
        android:title="@string/menu_Statistic"
        />
    <item
        android:id="@+id/menu_button3"
        android:title="@string/menu_HabitHistory"
        />
    <item
        android:id="@+id/menu_button4"
        android:checkable="true"
        android:title="@string/menu_Notification" />
    <item
        android:id="@+id/menu_button5"
        android:title="@string/menu_WOW" />
    <item
        android:id="@+id/menu_button6"
        android:title="@string/menu_MyFollowing" />


</menu>