<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017 CMPUT301F17T15. This project is distributed under the MIT license.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_book_black_24px"
        android:title="@string/dashboard" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24px"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_addNewHabit"
        android:icon="@drawable/ic_add_box_black_24px"
        android:title="@string/title_newHabit" />

    <item
        android:id="@+id/navigation_followRequests"
        android:icon="@drawable/ic_group_add_black_24px"
        android:title="@string/title_followRequests" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_account_circle_black_24px"
        android:title="@string/title_profile" />

</menu>
