<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017 CMPUT301F17T15. This project is distributed under the MIT license.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/Type_Input"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/Type_Input"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/edit_Type_Input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:ems="10"
        android:hint="@string/enter_new_type_here"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/Ok_Button"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok" />

</LinearLayout>