<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017 CMPUT301F17T15. This project is distributed under the MIT license.
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cmput301.cia.activities.HabitViewActivity">

    <include
        android:id="@+id/app_toolbar_habit_detail"
        layout="@layout/app_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"></include>


    <EditText
        android:id="@+id/EditHabitName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:fontFamily="sans-serif-condensed"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HabitNameText" />

    <EditText
        android:id="@+id/EditHabitType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HabitTypeText"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
        android:id="@+id/EditHabitReason"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HabitReasonText" />

    <TextView
        android:id="@+id/HabitNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/HabitNameText"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/app_toolbar_habit_detail"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/HabitTypeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/HabitTypeText"
        android:layout_marginTop="-1dp"
        app:layout_constraintTop_toBottomOf="@+id/EditHabitName"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/HabitReasonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/HabitReasonText"
        android:layout_marginTop="-1dp"
        app:layout_constraintTop_toBottomOf="@+id/EditHabitType"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp" />

</android.support.constraint.ConstraintLayout>