<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017 CMPUT301F17T15. This project is distributed under the MIT license.
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cmput301.cia.activities.habits.CreateHabitActivity">

    <ScrollView
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.cmput301.cia.activities.habits.CreateHabitActivity">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/habitNameWrapper"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:hint="habit name"
                tools:layout_editor_absoluteY="61dp">
                <EditText
                    android:id="@+id/habitName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="20"
                    android:ems="10"
                    android:inputType="textPersonName" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/reasonWrapper"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/habitNameWrapper"
                android:hint="reason">
                <EditText
                    android:id="@+id/reason"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:maxLength="30"
                    android:inputType="textPersonName" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/startDateWrapper"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/habitTypeSpinner"
                android:hint="start date"
                android:weightSum="1">

                <TextView
                    android:id="@+id/startDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textSize="18sp" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/calendarButton"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/ic_date_range_black_24px"
                android:onClick="datePickerDialog"
                app:layout_constraintLeft_toRightOf="@+id/startDateWrapper"
                app:layout_constraintTop_toBottomOf="@+id/habitTypeSpinner"
                tools:layout_editor_absoluteY="263dp" />

            <Spinner
                android:id="@+id/habitTypeSpinner"
                android:layout_width="223dp"
                android:layout_height="26dp"
                android:layout_marginLeft="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/reasonWrapper"
                android:layout_marginStart="16dp" />

            <ca.antonious.materialdaypicker.MaterialDayPicker
                android:id="@+id/day_picker"
                android:layout_width="342dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/frequency"
                android:layout_marginLeft="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="16dp" />

            <TextView
                android:id="@+id/frequency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/frequency"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/startDateWrapper"
                android:layout_marginStart="20dp" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:onClick="saveChange"
                android:text="@string/save"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/day_picker" />

            <TextView
                android:id="@+id/StartDateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/StartDateText"
                app:layout_constraintBottom_toTopOf="@+id/startDateWrapper"
                app:layout_constraintTop_toBottomOf="@+id/habitTypeSpinner"
                app:layout_constraintVertical_bias="0.333"
                android:layout_marginLeft="0dp"
                app:layout_constraintLeft_toLeftOf="@+id/habitTypeSpinner" />

            <TextView
                android:id="@+id/HabitTypeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="8dp"
                android:text="@string/HabitTypeText"
                app:layout_constraintBottom_toTopOf="@+id/habitTypeSpinner"
                app:layout_constraintLeft_toLeftOf="@+id/reasonWrapper"
                app:layout_constraintTop_toBottomOf="@+id/reasonWrapper" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
